--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <g mask="url(#mask0)">
                         <path
                             d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z" />
-                        <image class="home__blob-img" href="profile/blob.jpg" width="479" height="467"
+                        <image class="home__blob-img" href="Profile/blob.jpg" width="479" height="467"
                             preserveAspectRatio="xMidYMid slice" />
                     </g>
                 </svg>
@@ -297,9 +297,9 @@
                                 <div class="media">
                                     <div class="images-wrap">
                                         <div class="images-track">
-                                            <img src="FourthYear/img1.jpg" alt="Senior photo 1" loading="lazy">
-                                            <img src="FourthYear/img2.jpg" alt="Senior photo 2" loading="lazy">
-                                            <img src="FourthYear/img3.jpg" alt="Senior photo 3" loading="lazy">
+                                            <img src="FirstYear/img1.jpg" alt="Senior photo 1" loading="lazy">
+                                            <img src="FirstYear/img2.jpg" alt="Senior photo 2" loading="lazy">
+                                            <img src="FirstYear/img3.jpg" alt="Senior photo 3" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -317,9 +317,9 @@
                                 <div class="media">
                                     <div class="images-wrap">
                                         <div class="images-track">
-                                            <img src="assets/fresher/1.jpg" alt="Fresher photo 1" loading="lazy">
-                                            <img src="assets/fresher/2.jpg" alt="Fresher photo 2" loading="lazy">
-                                            <img src="assets/fresher/3.jpg" alt="Fresher photo 3" loading="lazy">
+                                            <img src="FirstYear/1.jpg" alt="Fresher photo 1" loading="lazy">
+                                            <img src="FirstYear/2.jpg" alt="Fresher photo 2" loading="lazy">
+                                            <img src="FirstYear/3.jpg" alt="Fresher photo 3" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -337,9 +337,9 @@
                                 <div class="media">
                                     <div class="images-wrap">
                                         <div class="images-track">
-                                            <img src="assets/success/1.jpg" alt="Success photo 1" loading="lazy">
-                                            <img src="assets/success/2.jpg" alt="Success photo 2" loading="lazy">
-                                            <img src="assets/success/3.jpg" alt="Success photo 3" loading="lazy">
+                                            <img src="FirstYear/1.jpg" alt="Success photo 1" loading="lazy">
+                                            <img src="FirstYear/2.jpg" alt="Success photo 2" loading="lazy">
+                                            <img src="FirstYear/3.jpg" alt="Success photo 3" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -1166,3 +1166,4 @@
 </body>
 
 </html>
+
