--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <g mask="url(#mask0)">
                         <path
                             d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z" />
-                        <image class="home__blob-img" href="profile/blob.jpg" width="479" height="467"
+                        <image class="home__blob-img" href="Profile/blob.jpg" width="479" height="467"
                             preserveAspectRatio="xMidYMid slice" />
                     </g>
                 </svg>
@@ -134,7 +134,7 @@
                         <br>
                         <p>📸 Too concerned about my picture, I always believe that you should always be yourself and
                             never forget your identity.
-                            Need a sharp, professional photo for official purposes: <a href="profile/professional.jpg"
+                            Need a sharp, professional photo for official purposes: <a href="Profile/professional.jpg"
                                 target="_blank">Here’s the one to use!</a></p>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
 
                     <main>
                         <section id="childhood" class="timeline-section" data-label="Childhood"
-                            data-bg="profile/background.png" tabindex="-1">
+                            data-bg="Profile/background.png" tabindex="-1">
                             <div class="section-inner">
                                 <div class="media">
                                     <div class="images-wrap">
@@ -188,7 +188,7 @@
                         </section>
 
                         <section id="middle" class="timeline-section" data-label="Middle School"
-                            data-bg="profile/background.png" tabindex="-1">
+                            data-bg="Profile/background.png" tabindex="-1">
                             <div class="section-inner">
                                 <div class="media">
                                     <div class="images-wrap">
@@ -220,7 +220,7 @@
                         </section>
 
                         <section id="highschool" class="timeline-section" data-label="Highschool"
-                            data-bg="profile/background.png" tabindex="-1">
+                            data-bg="Profile/background.png" tabindex="-1">
                             <div class="section-inner">
                                 <div class="media">
                                     <div class="images-wrap">
@@ -251,7 +251,7 @@
                         </section>
 
                         <section id="freshman" class="timeline-section" data-label="Freshman"
-                            data-bg="profile/background.png" tabindex="-1">
+                            data-bg="Profile/background.png" tabindex="-1">
                             <div class="section-inner">
                                 <div class="media">
                                     <div class="images-wrap">
@@ -275,7 +275,7 @@
                         </section>
 
                         <section id="sophomore" class="timeline-section" data-label="Sophomore"
-                            data-bg="profile/background.png" tabindex="-1">
+                            data-bg="Profile/background.png" tabindex="-1">
                             <div class="section-inner">
                                 <div class="media">
                                     <div class="images-wrap">
@@ -300,7 +300,7 @@
                         </section>
 
                         <section id="junior" class="timeline-section" data-label="Junior"
-                            data-bg="profile/background.png" tabindex="-1">
+                            data-bg="Profile/background.png" tabindex="-1">
                             <div class="section-inner">
                                 <div class="media">
                                     <div class="images-wrap">
@@ -323,7 +323,7 @@
                         </section>
 
                         <section id="senior" class="timeline-section" data-label="Senior"
-                            data-bg="profile/background.png" tabindex="-1">
+                            data-bg="Profile/background.png" tabindex="-1">
                             <div class="section-inner">
                                 <div class="media">
                                     <div class="images-wrap">
@@ -331,6 +331,9 @@
                                             <img src="FourthYear/img1.jpg" alt="Senior photo 1" loading="lazy">
                                             <img src="FourthYear/img2.jpg" alt="Senior photo 2" loading="lazy">
                                             <img src="FourthYear/img3.jpg" alt="Senior photo 3" loading="lazy">
+                                            <img src="FourthYear/img4.png" alt="Senior photo 4" loading="lazy">
+                                            <img src="FourthYear/img5.jpg" alt="Senior photo 5" loading="lazy">
+                                            <img src="FourthYear/img6.png" alt="Senior photo 6" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -347,14 +350,15 @@
                         </section>
 
                         <section id="fresher" class="timeline-section" data-label="Fresher"
-                            data-bg="profile/background.png" tabindex="-1">
+                            data-bg="Profile/background.png" tabindex="-1">
                             <div class="section-inner">
                                 <div class="media">
                                     <div class="images-wrap">
                                         <div class="images-track">
-                                            <img src="assets/fresher/1.jpg" alt="Fresher photo 1" loading="lazy">
-                                            <img src="assets/fresher/2.jpg" alt="Fresher photo 2" loading="lazy">
-                                            <img src="assets/fresher/3.jpg" alt="Fresher photo 3" loading="lazy">
+                                            <img src="Fresher/img1.jpg" alt="Fresher photo 1" loading="lazy">
+                                            <img src="Fresher/img2.jpg" alt="Fresher photo 2" loading="lazy">
+                                            <img src="Fresher/img3.jpg" alt="Fresher photo 3" loading="lazy">
+                                            <img src="Fresher/img4.jpg" alt="Fresher photo 4" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -370,14 +374,14 @@
                         </section>
 
                         <section id="success" class="timeline-section" data-label="In next 5 years.."
-                            data-bg="profile/background.png" tabindex="-1">
+                            data-bg="Profile/background.png" tabindex="-1">
                             <div class="section-inner">
                                 <div class="media">
                                     <div class="images-wrap">
                                         <div class="images-track">
-                                            <img src="assets/success/1.jpg" alt="Success photo 1" loading="lazy">
-                                            <img src="assets/success/2.jpg" alt="Success photo 2" loading="lazy">
-                                            <img src="assets/success/3.jpg" alt="Success photo 3" loading="lazy">
+                                            <img src="Success/1.jpg" alt="Success photo 1" loading="lazy">
+                                            <img src="Success/2.jpg" alt="Success photo 2" loading="lazy">
+                                            <img src="Success/3.jpg" alt="Success photo 3" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -930,22 +934,22 @@
             <div class="wall-container bd-grid">
                 <div class="wall-grid" id="wallGrid" role="list">
                     <figure class="wall-item" tabindex="0" data-caption="Jury — Hackelite 2025">
-                        <img src="Awards/award1.jpg" alt="Jury — Hackelite 2025" loading="lazy">
+                        <img src="Awards/Award1.jpg" alt="Jury — Hackelite 2025" loading="lazy">
                         <figcaption>Jury — Hackelite 2025</figcaption>
                     </figure>
 
                     <figure class="wall-item" tabindex="0" data-caption="Judge - Xplore'25 - Loyola ICAM">
-                        <img src="Awards/award4.jpg" alt="Judge - Xplore'25 - Loyola ICAM" loading="lazy">
+                        <img src="Awards/Award4.jpg" alt="Judge - Xplore'25 - Loyola ICAM" loading="lazy">
                         <figcaption>Judge - Xplore'25 - Loyola ICAM</figcaption>
                     </figure>
 
                     <figure class="wall-item" tabindex="0" data-caption="Coach - MIT Basketball team">
-                        <img src="Awards/award3.jpg" alt="Coach - MIT Basketball team" loading="lazy">
+                        <img src="Awards/Award3.jpg" alt="Coach - MIT Basketball team" loading="lazy">
                         <figcaption>Coach - MIT Basketball team</figcaption>
                     </figure>
 
                     <figure class="wall-item" tabindex="0" data-caption="3rd place - Zonals Coach">
-                        <img src="Awards/award5.jpg" alt="3rd place - Zonals Coach" loading="lazy">
+                        <img src="Awards/Award5.jpg" alt="3rd place - Zonals Coach" loading="lazy">
                         <figcaption>3rd place - Basketball Zonals</figcaption>
                     </figure>
 
@@ -971,17 +975,17 @@
                     </figure>
 
                     <figure class="wall-item" tabindex="0" data-caption="Blood Donation Drive">
-                        <img src="Awards/award6.jpg" alt="Blood Donation Drive" loading="lazy">
+                        <img src="Awards/Award6.jpg" alt="Blood Donation Drive" loading="lazy">
                         <figcaption>Blood Donation Drive</figcaption>
                     </figure>
 
                     <figure class="wall-item" tabindex="0" data-caption="MIT Basketball Team">
-                        <img src="Awards/award7.jpg" alt="MIT Basketball Team" loading="lazy">
+                        <img src="Awards/Award7.jpg" alt="MIT Basketball Team" loading="lazy">
                         <figcaption>MIT Basketball Team</figcaption>
                     </figure>
 
                     <figure class="wall-item" tabindex="0" data-caption="Scout Program - Top 100 in TN">
-                        <img src="Awards/award2.jpg" alt="Scout Program - Top 100 in TN" loading="lazy">
+                        <img src="Awards/Award2.jpg" alt="Scout Program - Top 100 in TN" loading="lazy">
                         <figcaption>Scout Program - Top 100 in TN</figcaption>
                     </figure>
 
