--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                 <div class="media">
                                     <div class="images-wrap">
                                         <div class="images-track">
-                                            <img src="childhood/childhood1.png" alt="Childhood photo 1" loading="lazy">
+                                            <img src="childhood/childhood1.jpg" alt="Childhood photo 1" loading="lazy">
                                             <img src="childhood/childhood2.jpg" alt="Childhood photo 2" loading="lazy">
                                             <img src="childhood/childhood3.jpg" alt="Childhood photo 3" loading="lazy">
                                             <img src="childhood/childhood4.jpg" alt="Childhood photo 4" loading="lazy">
@@ -171,7 +171,7 @@
                                             <img src="childhood/childhood6.jpg" alt="Childhood photo 6" loading="lazy">
                                             <img src="childhood/childhood7.jpg" alt="Childhood photo 7" loading="lazy">
                                             <img src="childhood/childhood8.jpg" alt="Childhood photo 8" loading="lazy">
-                                            <img src="childhood/childhood9.jpg" alt="Childhood photo 9" loading="lazy">
+                                            <img src="childhood/childhood9.png" alt="Childhood photo 9" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -193,6 +193,8 @@
                                 <div class="media">
                                     <div class="images-wrap">
                                         <div class="images-track">
+                                            <img src="middleschool/middleschool1.jpg" alt="Middle school photo 1"
+                                                loading="lazy">
                                             <img src="middleschool/middleschool1.png" alt="Middle school photo 1"
                                                 loading="lazy">
                                             <img src="middleschool/middleschool2.jpg" alt="Middle school photo 2"
@@ -225,6 +227,8 @@
                                 <div class="media">
                                     <div class="images-wrap">
                                         <div class="images-track">
+                                            <img src="highschool/highschool1.png" alt="Highschool photo 1"
+                                                loading="lazy">
                                             <img src="highschool/highschool1.jpg" alt="Highschool photo 1"
                                                 loading="lazy">
                                             <img src="highschool/highschool2.jpg" alt="Highschool photo 2"
@@ -330,8 +334,8 @@
                                         <div class="images-track">
                                             <img src="FourthYear/img1.jpg" alt="Senior photo 1" loading="lazy">
                                             <img src="FourthYear/img2.jpg" alt="Senior photo 2" loading="lazy">
-                                            <img src="FourthYear/img3.jpg" alt="Senior photo 3" loading="lazy">
-                                            <img src="FourthYear/img4.png" alt="Senior photo 4" loading="lazy">
+                                            <img src="FourthYear/img3.png" alt="Senior photo 3" loading="lazy">
+                                            <img src="FourthYear/img4.jpg" alt="Senior photo 4" loading="lazy">
                                             <img src="FourthYear/img5.jpg" alt="Senior photo 5" loading="lazy">
                                             <img src="FourthYear/img6.png" alt="Senior photo 6" loading="lazy">
                                         </div>
@@ -379,9 +383,12 @@
                                 <div class="media">
                                     <div class="images-wrap">
                                         <div class="images-track">
-                                            <img src="Success/1.jpg" alt="Success photo 1" loading="lazy">
-                                            <img src="Success/2.jpg" alt="Success photo 2" loading="lazy">
-                                            <img src="Success/3.jpg" alt="Success photo 3" loading="lazy">
+                                            <img src="Future/img1.jpg" alt="Success photo 1" loading="lazy">
+                                            <img src="Future/img2.jpg" alt="Success photo 2" loading="lazy">
+                                            <img src="Future/img3.jpg" alt="Success photo 3" loading="lazy">
+                                            <img src="Future/img4.jpg" alt="Success photo 4" loading="lazy">
+                                            <img src="Future/img5.jpg" alt="Success photo 5" loading="lazy">
+                                            <img src="Future/img6.png" alt="Success photo 6" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -1215,11 +1222,15 @@
     <!--===== SCROLL REVEAL =====-->
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!--===== MAIN JS =====-->
-    <script src="main.js"></script>
 
     <script defer src="memory-lane.js"></script>
+    <button id="theme-toggle" class="a11y-toggle" aria-pressed="false" aria-label="Toggle theme">
+      <span id="theme-icon">🌙</span>
+    </button>
 
+    
+    <!--===== MAIN JS =====-->
+    <script src="main.js"></script>
 </body>
 
 </html>
