Final Update HTML

--- a/index.html
+++ b/index.html
@@ -962,22 +962,22 @@
 
 
                     <figure class="wall-item" tabindex="0" data-caption="Website Head PDA">
-                        <img src="Awards/award8.jpg" alt="Website Head PDA" loading="lazy">
+                        <img src="Awards/Award8.jpg" alt="Website Head PDA" loading="lazy">
                         <figcaption>Website Head PDA</figcaption>
                     </figure>
 
                     <figure class="wall-item" tabindex="0" data-caption="Web Development sessions - PDA">
-                        <img src="Awards/award10.jpg" alt="Web Development sessions - PDA" loading="lazy">
+                        <img src="Awards/Award10.jpg" alt="Web Development sessions - PDA" loading="lazy">
                         <figcaption>Web Development sessions - PDA</figcaption>
                     </figure>
 
                     <figure class="wall-item" tabindex="0" data-caption="Workshop - Future with GenAI">
-                        <img src="Awards/award12.jpg" alt="Workshop - Future with GenAI" loading="lazy">
+                        <img src="Awards/Award12.jpg" alt="Workshop - Future with GenAI" loading="lazy">
                         <figcaption>Workshop - Future with GenAI</figcaption>
                     </figure>
 
                     <figure class="wall-item" tabindex="0" data-caption="Workshop - ITA">
-                        <img src="Awards/award9.jpg" alt="Workshop - ITA" loading="lazy">
+                        <img src="Awards/Award9.jpg" alt="Workshop - ITA" loading="lazy">
                         <figcaption>Workshop - ITA</figcaption>
                     </figure>
 
@@ -997,7 +997,7 @@
                     </figure>
 
                     <figure class="wall-item" tabindex="0" data-caption="Degree - First Class with Distinction">
-                        <img src="Awards/award11.jpg" alt="Degree - First Class with Distinction" loading="lazy">
+                        <img src="Awards/Award11.jpg" alt="Degree - First Class with Distinction" loading="lazy">
                         <figcaption>Degree - First Class with Distinction</figcaption>
                     </figure>
 
